app/assets/stylesheets/custom.less
@import "colors";

@node-color: white;
@connection-color: black;
@stroke-color: @gray;
@selected-color: #74DDFC;
@selected-nodetext-color: white;
@fixed-color: #555;
@text-color: #333;
@data-tooltip-color: rgba(0,31,63,0.8);
@controls-z-index: 1;

.node {
  transition: opacity .5s ease-in-out;
  cursor: pointer;
}

.node rect {
  cursor: pointer;
  fill: @node-color;
}

.node.dim {
  opacity: 0.3;
}

.node.selected rect {
  stroke: @selected-color;
  stroke-width: 3px;
}

.node.fixed line{
  stroke-dasharray:5;
  stroke: @fixed-color;
}

.node line {
  stroke: #bbb;
}

.node text {
  cursor: pointer;
  font: 16px sans-serif;
  font-weight:bold;
  pointer-events: none;
  text-anchor: middle;
  fill: @text-color;
}

.connection text {
  font: 15px sans-serif;
  pointer-events: none;
  text-anchor: middle;
  fill: #eee;
  text-shadow: 0 1px 0 #333, 1px 0 0 #333, 0 -1px 0 #333, -1px 0 0 #333;
}

.connection line {
  stroke: @connection-color;
  stroke-width: 4px;
  stroke-linecap:round;
  opacity: 0.5;
  cursor: pointer;
}

.connection.selected line {
  stroke: @selected-color;
  opacity: 1;
}

.connection.selected text {
  fill: @selected-color;
  text-shadow: 0 2px 0 #333, 2px 0 0 #333, 0 -2px 0 #333, -2px 0 0 #333;
}

.connection.dim line {
  opacity: 0.1;
}

.connection.dim text {
  opacity: 0.3;
}

line {
  fill: none;
  stroke: #000;
  stroke-width: 4px;
  cursor: default;
}

line.dragline {
  pointer-events: none;
}

line.hidden {
  stroke-width: 0;
}

html, body {
  overflow: hidden;
  background: #204352;
  height: 100%;
}

#main-container {
  position: fixed;
  height: 100%;
  width: 100%;
}

svg {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

#graph {
  width: 100%;
  height: 100%;
  position: fixed;
}

#zoom-controls {
  position: absolute;
  bottom: 40px;
  left: 10px;
}

#sidebar {
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  width: 0;
  background: @navy;
  overflow-y: scroll;
}

#trash-bin {
  height: 68px;
  width: 200px;
  font-size: 26pt;
  color: lightgray;
  position: absolute;
  bottom: 40px;
  left: 60px;
  padding-top:5px;
  text-align: center;
  border: 4px dashed lightgray;
  border-radius: 4px;
}

#trash-bin.selected {
  border-color:@selected-color;
  color:@selected-color;
}

#details-container {
  position: absolute;
  width: 100%;
  padding: 8px 10px 0 10px;
  -ms-word-break: break-all;
  word-break: break-all;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
}

.detail-controls{
  padding-bottom: 10px
}

.data-tooltip-container {
  position: absolute;
  top: 0;
  left: 0;
}

.data-tooltip {
  background: @data-tooltip-color;
  color: @white;
  border: 1px solid @black;
  max-width: 300px;
}

.toolbar {
  position: absolute;
}

.toolbar.left {
  z-index: @controls-z-index + 1;
}

.toolbar.right {
  position: absolute;
  right: 15px;
}

.toolbar.bottom {
  position: absolute;
  bottom: 40px;
}

.controls {
  z-index: @controls-z-index;
}

#add-node-form {
  display: inline;
}

.edit-details-form input[type="text"], .edit-details-form button[type="button"] {
  padding: 2px 5px;
  height: auto;
}

.edit-details-form .help-block, .edit-details-form .form-group, .edit-details-form .label {
  margin: 2px 0px;
}

#menu-title {
  outline: none;
  width: 450px;
  background: transparent;
  border: 0;
  float: left;
}

#menu-title:focus {
  background: @white;
}

#menu-bar .nav-pills {
  a{
    padding: 5px 10px;
  }

  float: left;
}

.network-share-button {
  margin-right:auto;
  margin-left:auto;
}

// Overriding Bootstrap defaults

.btn {
  outline: none !important;
}

.navbar {
  margin-bottom: 0;
  min-height: 0;
  background: @silver;
  border: 0;
  border-radius: 0;
}

.navbar-brand, .navbar-text  {
  padding: 5px;
  height: auto;
  margin: 0px;
}

.panel-body {
  padding: 10px 15px;
}

// Bootstrap-colorpalette

.bootstrap-colorpalette {
    padding: 10px 0 10px 0;
    white-space: normal;
    line-height:1;
}

.bootstrap-colorpalette div {
    line-height:0;
}

.bootstrap-colorpalette .btn-color {
    width: 30px;
    height: 30px;
    border: 4px solid #fff;
    margin: 3px;
    padding: 0;
}

.bootstrap-colorpalette .btn-color:hover {
    border: 4px solid #000;
}

